# sekai-apphash-updater

./: .gitignore  README.md  config.example.py  constants.py  helpers.py  logger.py  pyproject.toml  updater.py
.github/: dependabot.yml
