[project]
name = "sekai-apphash-updater"
version = "0.1.1"
description = "Scan and extract apphash of Project Sekai: Colorful Stage feat. Hatsune Miku"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocron>=2.1",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "aiopath>=0.7.7",
    "beautifulsoup4>=4.13.4",
    "ruff>=0.11.9",
    "tqdm>=4.67.1",
    "unitypy>=1.22.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "W", # pycodestyle warnings
    "E", # pycodestyle errors
    "I", # isort
    "UP", # pyupgrade
    "ASYNC", # flake8-async
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
]
ignore = [
    "E402", # module-import-not-at-top-of-file
    "UP037", # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["nonebot", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
